--- a/fwoa-tools/package.json
+++ b/fwoa-tools/package.json
@@ -28,7 +28,9 @@
     "sort-package-json": "sort-package-json package.json",
     "standard-version": "standard-version --skip.tag=true",
     "test": "UNIT_TEST=true heft test --clean --no-build && rushx pkg-json-lint",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "export:dry": "ts-node ./src/migrationExport.ts -d",
+    "export": "ts-node ./src/migrationExport.ts"
   },
   "jest": {
     "moduleFileExtensions": [
